# pine

./: Cargo.toml  README.md
crates/analyzer/: Cargo.toml
crates/analyzer/src/: analyzer.rs
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lib.rs  types.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: codegen.rs  function.rs  lib.rs  variable.rs
crates/lexer/src/: lexer.rs
crates/linker/: Cargo.toml
crates/linker/src/: linker.rs
crates/parser/: Cargo.toml
crates/parser/src/: parser.rs
crates/utils/src/: lib.rs
examples/: arithmetic_expression.alp  main.alp
runtime/c/: pine_strcmp.c  pine_strcmp_ne.c
tools/alpherac/: Cargo.toml
tools/alpherac/src/: main.rs
tools/pinec/: Cargo.toml
tools/pinec/src/: main.rs  utils.rs
